# leptos-multiple-apps

./: Cargo.toml  README.md
app1/: Cargo.toml
app1/src/: lib.rs
app2/: Cargo.toml
app2/src/: lib.rs
src/: main.rs
